--- a/Web.UI/Views/Help/Help.cshtml
+++ b/Web.UI/Views/Help/Help.cshtml
@@ -18,12 +18,12 @@
 
         <!--=== help Page ===-->
         <!--=== Content Part ===-->
-        <div class="container content">
+        <div class="container content help-content-padding">
             <div class="row">
                 <div class="col-md-9">
                     <div class="headline"><h2>Help Topics</h2></div>
                     <div class="row help-page">
-                        <div class="col-md-2">
+                        <div class="col-md-2 inside-content">
                             <a class="fancyboxvideo fitVideo" data-width="800" data-height="450" caption="" href="http://player.vimeo.com/video/136152023?title=0&amp;byline=0&amp;portrait=0"><img src="../../Images/FamilyHistoryCourse1.8.png" class="img-responsive hover-effect" alt="" /></a>
                         </div>
                         <div class="col-md-10">
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div class="row help-page">
-                        <div class="col-md-2">
+                        <div class="col-md-2 inside-content">
                             <a class="fancyboxvideo fitVideo" data-width="800" data-height="450" caption="" href="http://player.vimeo.com/video/136152023?title=0&amp;byline=0&amp;portrait=0"><img src="../../Images/FamilyHistory1stConvert8.png" class="img-responsive hover-effect" alt="" /></a>
                         </div>
                         <div class="col-md-10">
@@ -70,13 +70,13 @@
                     <!-- End Pagination -->
                 </div><!--/col-md-9-->
 
-                <div class="col-md-3">
+                <div class="col-md-3 help-content-padding">
                     <!-- Popular Topics -->
-                    <div class="col-md-12">
+                    <div class="col-md-12 popular-content-body">
                         <div class="headline"><h2>Popular</h2></div>
                         <div class="row main-check margin-bottom-30">
-                            <div class="col-xs-12 md-margin-bottom-20">
-                                <ul class="list-unstyled check-style">
+                            <div class="col-xs-12 md-margin-bottom-20 inside-content">
+                                <ul class="list-unstyled check-style popular-content-size">
                                     <li><i class="fa fa-angle-right color-green"></i> <a href="#">Family History Course 1</a></li>
                                     <li><i class="fa fa-angle-right color-green"></i> <a href="#">Finding 1st Convert</a></li>
                                 </ul>
