--- a/Web.UI/Views/Faq/Faq.cshtml
+++ b/Web.UI/Views/Faq/Faq.cshtml
@@ -422,26 +422,26 @@
                 <div class="col-md-6">
                     <div class="headline"><h2>Popular Topics</h2></div>
                     <div class="row main-check margin-bottom-30">
-                        <div class="col-xs-6 md-margin-bottom-20">
+                        <div class="col-xs-6 md-margin-bottom-20 popular-padding">
                             <ul class="list-unstyled check-style">
-                                <li><i class="fa fa-angle-right service-icon"></i> <a href="#">How does encryption work?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">Is Unify Template legal?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">Can I download Unify multiple times?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">How to Update Unify Template?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">How does encryption work?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">Is Unify Template legal?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">Can I download Unify multiple times?</a></li>
+                                <li><i class="fa fa-angle-right service-icon"></i> <a class="list-color" href="#">How does encryption work?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">Is Unify Template legal?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">Can I download Unify multiple times?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">How to Update Unify Template?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">How does encryption work?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">Is Unify Template legal?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">Can I download Unify multiple times?</a></li>
                             </ul>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-xs-6 popular-padding">
                             <ul class="list-unstyled check-style">
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">How does encryption work?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">Is Unify Template legal?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">Can I download Unify multiple times?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">How to Update Unify Template?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">How does encryption work?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">Is Unify Template legal?</a></li>
-                                <li><i class="fa fa-angle-right color-green"></i> <a href="#">Can I download Unify multiple times?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">How does encryption work?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">Is Unify Template legal?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">Can I download Unify multiple times?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">How to Update Unify Template?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">How does encryption work?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">Is Unify Template legal?</a></li>
+                                <li><i class="fa fa-angle-right color-green"></i> <a class="list-color" href="#">Can I download Unify multiple times?</a></li>
                             </ul>
                         </div>
                     </div>
@@ -449,7 +449,7 @@
                     <hr>
 
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 popular-padding">
                             <div class="faq-add">
                                 <div class="top-part">
                                     <i class="icon-support"></i>
@@ -460,7 +460,7 @@
                                 <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid</p>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 popular-padding">
                             <div class="faq-add">
                                 <div class="top-part">
                                     <i class="icon-lock"></i>
