--- a/Web.UI/Views/Faq/Faq.cshtml
+++ b/Web.UI/Views/Faq/Faq.cshtml
@@ -76,7 +76,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse in" id="collapse-One">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -91,7 +91,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-Two">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -106,7 +106,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-Three">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Food truck quinoa nesciunt laborum eiusmodolf moon tempor, sunt aliqua put a bird. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                             </div>
                                         </div>
@@ -121,7 +121,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-Four">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -136,7 +136,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-Five">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -151,7 +151,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-Six">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -166,7 +166,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-Seven">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -186,7 +186,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse in" id="collapse-v2-One">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -201,7 +201,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v2-Two">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -216,7 +216,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v2-Three">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Food truck quinoa nesciunt laborum eiusmodolf moon tempor, sunt aliqua put a bird. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                             </div>
                                         </div>
@@ -231,7 +231,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v2-Four">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -246,7 +246,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v2-Five">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -266,7 +266,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse in" id="collapse-v3-One">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -281,7 +281,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v3-Two">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -296,7 +296,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v3-Three">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Food truck quinoa nesciunt laborum eiusmodolf moon tempor, sunt aliqua put a bird. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                             </div>
                                         </div>
@@ -311,7 +311,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v3-Four">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -326,7 +326,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v3-Five">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -346,7 +346,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse in" id="collapse-v4-One">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -361,7 +361,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v4-Two">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -376,7 +376,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v4-Three">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Food truck quinoa nesciunt laborum eiusmodolf moon tempor, sunt aliqua put a bird. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
                                             </div>
                                         </div>
@@ -391,7 +391,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v4-Four">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
@@ -406,7 +406,7 @@
                                             </h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse-v4-Five">
-                                            <div class="panel-body">
+                                            <div class="panel-body box-content">
                                                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
                                             </div>
                                         </div>
