Add google search feature

--- a/Web.UI/Views/Research/Research.cshtml
+++ b/Web.UI/Views/Research/Research.cshtml
@@ -27,6 +27,15 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="promo-box">
+                        <a id="googleSearch" href="#">
+                            <span class="fa fmf-google64"></span>
+                            <strong>Google Search</strong>
+                        </a>
+                        <p>This utility provides a easy user interface to enter data for common fields to perform a more comprehensive Google search</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="promo-box">
                         <a id="findPerson" href="#">
                             <span class="fa fmf-search64"></span>
                             <strong>Find Person</strong>
@@ -44,7 +53,8 @@
                         <p>This utility will help guide you in deciding the best ancestor to start researching</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="row">
                 <div class="col-md-4">
                     <div class="promo-box">
                         <a id="findClues" href="#">
@@ -55,8 +65,6 @@
                     </div>
 
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-4">
                     <div class="promo-box">
                         <a id="ordinances" href="#">
@@ -77,6 +85,10 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="row">
+
+
                 <div class="col-md-4">
                     <div class="promo-box">
                         <a id="possibleDuplicates" href="#">
@@ -86,10 +98,6 @@
                         <p>This utility searches for any ancestor or descendant that has possible duplicates or matches</p>
                     </div>
                 </div>
-
-
-            </div>
-            <div class="row">
 
                 <div class="col-md-4">
                     <div class="promo-box">
@@ -111,6 +119,11 @@
                     </div>
                 </div>
 
+
+            </div>
+
+            <div class="row">
+
                 <div class="col-md-4">
                     <div class="promo-box">
                         <a id="retrieve" href="#">
@@ -120,10 +133,6 @@
                         <p>This utility retrieves and stores family search data that can be used later for family history research</p>
                     </div>
                 </div>
-
-            </div>
-
-            <div class="row">
 
                 <div class="col-md-4">
                     <div class="promo-box">
