--- a/Web.UI/Content/css/research-sprite.css
+++ b/Web.UI/Content/css/research-sprite.css
@@ -11,181 +11,181 @@ Icon classes can be used entirely standalone. They are named after their origina
 */
 .fmf-about16 {
   background-image: url(research.png);
-  background-position: -32px -294px;
+  background-position: -316px -96px;
   width: 16px;
   height: 16px;
 }
 .fmf-american16 {
   background-image: url(research.png);
-  background-position: -208px -254px;
+  background-position: -316px -192px;
   width: 16px;
   height: 16px;
 }
 .fmf-ancestry16 {
   background-image: url(research.png);
-  background-position: -16px -294px;
+  background-position: -316px -240px;
   width: 16px;
   height: 16px;
 }
 .fmf-billiongraves16 {
   background-image: url(research.png);
-  background-position: 0px -294px;
+  background-position: -316px -256px;
   width: 16px;
   height: 16px;
 }
 .fmf-calendar16 {
   background-image: url(research.png);
-  background-position: -272px -270px;
+  background-position: -224px -191px;
   width: 16px;
   height: 16px;
 }
 .fmf-cancel24 {
   background-image: url(research.png);
-  background-position: -216px -78px;
+  background-position: -192px -167px;
   width: 24px;
   height: 24px;
 }
 .fmf-clean24 {
   background-image: url(research.png);
-  background-position: -192px -142px;
+  background-position: -264px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-close24 {
   background-image: url(research.png);
-  background-position: -216px -142px;
+  background-position: -192px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-clue16 {
   background-image: url(research.png);
-  background-position: -256px -270px;
+  background-position: -192px -191px;
   width: 16px;
   height: 16px;
 }
 .fmf-clue24 {
   background-image: url(research.png);
-  background-position: -264px -206px;
+  background-position: -144px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-clue64 {
   background-image: url(research.png);
-  background-position: -64px -78px;
+  background-position: 0px -143px;
   width: 64px;
   height: 64px;
 }
 .fmf-compass16 {
   background-image: url(research.png);
-  background-position: -240px -270px;
+  background-position: -316px -160px;
   width: 16px;
   height: 16px;
 }
 .fmf-compass24 {
   background-image: url(research.png);
-  background-position: -24px -270px;
+  background-position: -192px -78px;
   width: 24px;
   height: 24px;
 }
 .fmf-compass64 {
   background-image: url(research.png);
-  background-position: -128px -78px;
+  background-position: -128px -143px;
   width: 64px;
   height: 64px;
 }
 .fmf-dates24 {
   background-image: url(research.png);
-  background-position: -192px -78px;
+  background-position: -280px -207px;
   width: 24px;
   height: 24px;
 }
 .fmf-dates64 {
   background-image: url(research.png);
-  background-position: 0px -142px;
+  background-position: -252px -64px;
   width: 64px;
   height: 64px;
 }
 .fmf-duplicate16 {
   background-image: url(research.png);
-  background-position: -208px -270px;
+  background-position: -316px -80px;
   width: 16px;
   height: 16px;
 }
 .fmf-duplicates24 {
   background-image: url(research.png);
-  background-position: -216px -102px;
+  background-position: -192px -143px;
   width: 24px;
   height: 24px;
 }
 .fmf-duplicates64 {
   background-image: url(research.png);
-  background-position: -64px -142px;
+  background-position: 0px -207px;
   width: 64px;
   height: 64px;
 }
 .fmf-earth-icon16 {
   background-image: url(research.png);
-  background-position: -192px -270px;
+  background-position: -316px -176px;
   width: 16px;
   height: 16px;
 }
 .fmf-exclamation24 {
   background-image: url(research.png);
-  background-position: -192px -166px;
+  background-position: -216px -102px;
   width: 24px;
   height: 24px;
 }
 .fmf-execute24 {
   background-image: url(research.png);
-  background-position: -216px -166px;
+  background-position: -192px -102px;
   width: 24px;
   height: 24px;
 }
 .fmf-family16 {
   background-image: url(research.png);
-  background-position: -288px -254px;
+  background-position: -208px -126px;
   width: 16px;
   height: 16px;
 }
 .fmf-family24 {
   background-image: url(research.png);
-  background-position: -216px -206px;
+  background-position: -216px -78px;
   width: 24px;
   height: 24px;
 }
 .fmf-family64 {
   background-image: url(research.png);
-  background-position: -252px 0px;
+  background-position: -192px -207px;
   width: 64px;
   height: 64px;
 }
 .fmf-familysearch16 {
   background-image: url(research.png);
-  background-position: -256px -254px;
+  background-position: -316px -64px;
   width: 16px;
   height: 16px;
 }
 .fmf-feedback24 {
   background-image: url(research.png);
-  background-position: -288px -206px;
+  background-position: -24px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-find64 {
   background-image: url(research.png);
-  background-position: -252px -128px;
+  background-position: -128px -207px;
   width: 64px;
   height: 64px;
 }
 .fmf-findagrave16 {
   background-image: url(research.png);
-  background-position: -240px -254px;
+  background-position: -316px -112px;
   width: 16px;
   height: 16px;
 }
 .fmf-findmyfamilies16 {
   background-image: url(research.png);
-  background-position: -224px -254px;
+  background-position: -316px -128px;
   width: 16px;
   height: 16px;
 }
@@ -203,25 +203,37 @@ Icon classes can be used entirely standalone. They are named after their origina
 }
 .fmf-findmypast16 {
   background-image: url(research.png);
-  background-position: -224px -190px;
+  background-position: -272px -255px;
   width: 16px;
   height: 16px;
 }
 .fmf-google16 {
   background-image: url(research.png);
-  background-position: -208px -190px;
+  background-position: -316px -208px;
   width: 16px;
   height: 16px;
 }
+.fmf-google24 {
+  background-image: url(research.png);
+  background-position: -216px -143px;
+  width: 24px;
+  height: 24px;
+}
+.fmf-google64 {
+  background-image: url(research.png);
+  background-position: 0px -78px;
+  width: 64px;
+  height: 65px;
+}
 .fmf-help16 {
   background-image: url(research.png);
-  background-position: -192px -190px;
+  background-position: -316px -272px;
   width: 16px;
   height: 16px;
 }
 .fmf-help24 {
   background-image: url(research.png);
-  background-position: -72px -270px;
+  background-position: -216px -167px;
   width: 24px;
   height: 24px;
 }
@@ -233,157 +245,157 @@ Icon classes can be used entirely standalone. They are named after their origina
 }
 .fmf-hint24 {
   background-image: url(research.png);
-  background-position: -120px -270px;
+  background-position: -256px -207px;
   width: 24px;
   height: 24px;
 }
 .fmf-hint64 {
   background-image: url(research.png);
-  background-position: 0px -206px;
+  background-position: -252px 0px;
   width: 64px;
   height: 64px;
 }
 .fmf-information16 {
   background-image: url(research.png);
-  background-position: -272px -254px;
+  background-position: -256px -255px;
   width: 16px;
   height: 16px;
 }
 .fmf-myheritage16 {
   background-image: url(research.png);
-  background-position: -208px -126px;
+  background-position: -316px -48px;
   width: 16px;
   height: 16px;
 }
 .fmf-ok24 {
   background-image: url(research.png);
-  background-position: -168px -270px;
+  background-position: -256px -231px;
   width: 24px;
   height: 24px;
 }
 .fmf-options24 {
   background-image: url(research.png);
-  background-position: -96px -270px;
+  background-position: -280px -231px;
   width: 24px;
   height: 24px;
 }
 .fmf-place24 {
   background-image: url(research.png);
-  background-position: -48px -270px;
+  background-position: 0px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-place64 {
   background-image: url(research.png);
-  background-position: -64px -206px;
+  background-position: -64px -143px;
   width: 64px;
   height: 64px;
 }
 .fmf-previous24 {
   background-image: url(research.png);
-  background-position: 0px -270px;
+  background-position: -48px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-puzilla16 {
   background-image: url(research.png);
-  background-position: -192px -254px;
+  background-position: -316px -144px;
   width: 16px;
   height: 16px;
 }
 .fmf-question24 {
   background-image: url(research.png);
-  background-position: -288px -230px;
+  background-position: -72px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-report24 {
   background-image: url(research.png);
-  background-position: -240px -230px;
+  background-position: -96px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-reset24 {
   background-image: url(research.png);
-  background-position: -216px -230px;
+  background-position: -120px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-reset64 {
   background-image: url(research.png);
-  background-position: -252px -64px;
+  background-position: -128px -78px;
   width: 64px;
   height: 64px;
 }
 .fmf-retrieve16 {
   background-image: url(research.png);
-  background-position: -192px -126px;
+  background-position: -316px -224px;
   width: 16px;
   height: 16px;
 }
 .fmf-retrieve24 {
   background-image: url(research.png);
-  background-position: -192px -206px;
+  background-position: -168px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-retrieve64 {
   background-image: url(research.png);
-  background-position: -128px -206px;
+  background-position: -64px -78px;
   width: 64px;
   height: 64px;
 }
 .fmf-save24 {
   background-image: url(research.png);
-  background-position: -192px -102px;
+  background-position: -216px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-search16 {
   background-image: url(research.png);
-  background-position: -224px -270px;
+  background-position: -192px -126px;
   width: 16px;
   height: 16px;
 }
 .fmf-search24 {
   background-image: url(research.png);
-  background-position: -264px -230px;
+  background-position: -240px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-search64 {
   background-image: url(research.png);
-  background-position: 0px -78px;
+  background-position: -64px -207px;
   width: 64px;
   height: 64px;
 }
 .fmf-submit24 {
   background-image: url(research.png);
-  background-position: -144px -270px;
+  background-position: -288px -271px;
   width: 24px;
   height: 24px;
 }
 .fmf-temple16 {
   background-image: url(research.png);
-  background-position: -288px -270px;
+  background-position: -208px -191px;
   width: 16px;
   height: 16px;
 }
 .fmf-temple24 {
   background-image: url(research.png);
-  background-position: -192px -230px;
+  background-position: -316px 0px;
   width: 24px;
   height: 24px;
 }
 .fmf-temple64 {
   background-image: url(research.png);
-  background-position: -128px -142px;
+  background-position: -252px -128px;
   width: 64px;
   height: 64px;
 }
 .fmf-warning24 {
   background-image: url(research.png);
-  background-position: -240px -206px;
+  background-position: -316px -24px;
   width: 24px;
   height: 24px;
 }
