--- a/Web.UI/Views/Research/FindPerson.cshtml
+++ b/Web.UI/Views/Research/FindPerson.cshtml
@@ -8,15 +8,15 @@
                     <div class="row">
                         <div class="col-xs-2">
                             <label class="control-label">ID Number</label>
-                            <input type="text" class="form-control" name="personId" id="personId"/>
+                            <input type="text" class="form-control" name="personId" id="personId" />
                         </div>
                         <div class="col-xs-5">
                             <label class="control-label">First Name</label>
-                            <input type="text" class="form-control" name="firstName" id="firstName"/>
+                            <input type="text" class="form-control" name="firstName" id="firstName" />
                         </div>
                         <div class="col-xs-5">
                             <label class="control-label">Last Name</label>
-                            <input type="text" class="form-control" name="lastName" id="lastName"/>
+                            <input type="text" class="form-control" name="lastName" id="lastName" />
                         </div>
                     </div>
                 </div>
@@ -45,7 +45,15 @@
                     </div>
                 </div>
                 <div class="twoButtons">
-                    <button name="findButton" type="submit" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-execute24 dialog-buttons"></i> Find</button>
+                    <div class="btn-group">
+                        <button name="findButton" type="submit" class="btn btn-default dropdown-btn"><i class="fa fmf-execute24 dialog-buttons"></i> Find</button>
+                        <a id="findPersonAction" class="personAction" href="javascript:void(0)" title="Select button for options to research other websites">
+                            <button id="findPersonActionButton" type="button" class="btn btn-toggle-success dropdown-toggle" data-toggle="dropdown">
+                                <span class="caret">
+                                </span><span class="sr-only">Toggle Dropdown</span>
+                            </button>
+                        </a>
+                    </div>
                     <div class="btn-group">
                         <button type="button" class=" btn-u btn-brd btn-brd-hover rounded btn-u-blue dropdown-toggle" data-toggle="dropdown" data-style="expand-left">
                             <i class="fa fmf-previous24 dialog-buttons"></i>
