Add donate page, and added Google Search feature to home page

--- a/Web.UI/Views/Shared/_Layout.cshtml
+++ b/Web.UI/Views/Shared/_Layout.cshtml
@@ -71,6 +71,7 @@
                             <li>@Html.ActionLink("Help", "Help", "Home")</li>
                             <li>@Html.ActionLink("FAQ", "Faq", "Home")</li>
                             <li><a id="feedback" href="#">Feedback</a></li>
+                            <li>@Html.ActionLink("Donate", "Donate", "Home")</li>
                             <!-- Search Block
                 <li><a href="http://findmyfamilies.wordpress.com/">Blog</a></li>
 
