Changed research to tools

--- a/Web.UI/Views/Shared/_Layout.cshtml
+++ b/Web.UI/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     <div class="collapse navbar-collapse navbar-responsive-collapse">
                         <ul class="nav navbar-nav">
 
-                            <li>@Html.ActionLink("Research", "Research", "Home")</li>
+                            <li>@Html.ActionLink("Tools", "Research", "Home")</li>
                             <li>@Html.ActionLink("Help", "Help", "Home")</li>
                             <li>@Html.ActionLink("FAQ", "Faq", "Home")</li>
                             <li><a id="feedback" href="#">Feedback</a></li>
