--- a/Web.UI/Views/Research/Research.cshtml
+++ b/Web.UI/Views/Research/Research.cshtml
@@ -8,18 +8,10 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400)">
 }
 
-<!--=== Breadcrumbs v3 ===-->
-<div class="breadcrumbs-v3 margin-top-0">
-    <div class="container">
-        <h1 class="pull-left">Family History Research Tool</h1>
-    </div>
-</div>
-<!--=== End Breadcrumbs v3 ===-->
-
 <div class="panel panel-blue margin-top-0">
     <div class="panel-heading">
         <h3 class="panel-title">
-            <i class="fa fa-tasks"></i> Utilities for Researching Family Names
+            <i class="fa fa-tasks"></i> Tools for Researching Family Names
         </h3>
     </div>
     <div class="panel-body">
